[project]
name = "orbitview"
version = "1.0.0"
description = "Live 3D satellite tracker — FastAPI + Skyfield backend, globe.gl front-end"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "skyfield~=1.53",
    "numpy>=2.0",
    "pillow>=11.0",
]

[project.optional-dependencies]
# The original matplotlib/tkinter desktop viewer, kept under legacy/.
desktop = ["matplotlib~=3.10"]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.6"]

[project.scripts]
orbitview = "orbitview.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orbitview"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
